--- a/f1oreconfig.json
+++ b/f1oreconfig.json
@@ -1,4 +1,4 @@
 {
-    "token": "NzIzOTk5Njg2NDAyMjQ0NjYx.Xu5z2A.dc5Z-rG13cn4FiM7bv1qxO1oegs",
+    "token": "NzIzOTk5Njg2NDAyMjQ0NjYx.XvM4cQ._pDt56U8Ey9gAQpwtxGzPmG563c",
     "prefix": "!"
 }
