--- a/f1oreconfig.json
+++ b/f1oreconfig.json
@@ -1,4 +1,5 @@
 {
     "token": "NzIzOTk5Njg2NDAyMjQ0NjYx.XvM4cQ._pDt56U8Ey9gAQpwtxGzPmG563c",
-    "prefix": "!"
+    "prefix": "!",
+    "youtube_api_v3": "AIzaSyAz9IO3sC44WFQRL1a8ZsrjxISDmnwfcm4"   
 }
