Починил чутка заказов, +адекватные реакции на ошибки и неадекватный способ выхода

--- a/f1oreconfig.json
+++ b/f1oreconfig.json
@@ -1,5 +1,5 @@
 {
-    "token": "NzIzOTk5Njg2NDAyMjQ0NjYx.XvM4cQ._pDt56U8Ey9gAQpwtxGzPmG563c",
+    "token": "NzIzOTk5Njg2NDAyMjQ0NjYx.Xu5zQA.Sdbnp792coa-a0cVzFXV3rP31Bo",
     "prefix": "!",
-    "youtube_api_v3": "AIzaSyAz9IO3sC44WFQRL1a8ZsrjxISDmnwfcm4"   
+    "youtube_api_v3": "AIzaSyBigMAqlx3dYImSTeXKEWd3Hq7LxgwsYfM"   
 }
